# Master-Insight-Trading-Bot

./: CMakeLists.txt  MIB_Utility.mqh  MasterInsightBot.mq5  MasterInsightBot.mqproj  README.md  main.cpp
Enums/: E_BBHSS.cpp  E_BHS.cpp  E_Risk_Appetite.cpp
Headers/: H_MQL_Functions.h  H_Master_Insight_Bot.h  H_Trade_Entry.h  H_Trade_Exit.h  H_Trade_Operation.h  H_Trailing_SL_TP.h
Headers/Indicator_Compositioners/: H_Potential_Trade_Entry_Detector.h
Headers/Indicators/: H_Indicator.h
Headers/Indicators/Trend/: Single_Moving_Average.cpp
Sources/: Master_Insight_Bot.cpp  Trade_Entry.cpp
Structs/: S_Indicator_Data.cpp  S_Order.cpp  S_Ticket.cpp
